Minor style tweaks. Fix edge of text input being cut off.

--- a/dnd5e.css
+++ b/dnd5e.css
@@ -557,8 +557,7 @@ h5 {
 }
 .trait-selector form > .trait-list {
   overflow: auto;
-  border-bottom: 2px groove;
-  margin-bottom: 0.5em;
+  border-bottom: 2px groove #eeede0;
 }
 .trait-selector .trait-list {
   list-style: none;
