--- a/less/apps.less
+++ b/less/apps.less
@@ -548,10 +548,9 @@ h5 {
     display: flex;
     flex-direction: column;
 
-    >.trait-list {
+    > .trait-list {
       overflow: auto;
-      border-bottom: 2px groove;
-      margin-bottom: 0.5em;
+      border-bottom: @borderGroove;
     }
   }
 
